# opengl-demo

./: .gitignore  AGENTS.md  build.gradle  deps.txt  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: test.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
biz-center/render-engine/: build.gradle
biz-center/render-engine/src/main/: AndroidManifest.xml
biz-center/render-engine/src/main/assets/materials/: baked_color.filamat  grid.filamat
biz-center/render-engine/src/main/materials/: baked_color.mat  grid.mat
biz/chat/: build.gradle
biz/chat/src/main/: AndroidManifest.xml
biz/data-engine/: build.gradle
biz/filament/: build.gradle
biz/filament/src/main/: AndroidManifest.xml
biz/filament/src/main/assets/materials/: baked_color.filamat  grid.filamat
biz/filament/src/main/assets/point_cloud/: point_cloud.ply
biz/filament/src/main/materials/: grid.mat  grid.mat.bak
biz/filament/src/main/res/drawable/: icon_mark.xml
biz/filament/src/main/res/layout/: filament_layout.xml  layout_mark.xml
biz/flow-test/: build.gradle
biz/flow-test/src/main/: AndroidManifest.xml
biz/libservice/: AndroidManifest.xml  build-cfg.json  build.gradle
biz/libservice/src/main/cpp/: CMakeLists.txt
biz/opengl/: build.gradle
biz/opengl/src/main/: AndroidManifest.xml
biz/rajawali/: build.gradle
biz/rajawali/src/main/: AndroidManifest.xml
biz/ui-test/: build.gradle  proguard-rules.pro
biz/ui-test/src/main/: AndroidManifest.xml
biz/uitest/: build.gradle
biz/uitest/src/main/: AndroidManifest.xml
biz/unityLibrary/: build.gradle
biz/unityLibrary/src/main/: AndroidManifest.xml
buildSrc22/: build.gradle
dependency/: build.gradle
docs/superpowers/plans/: 2026-05-23-chat-facade-kernel-mvi.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: application.gradle  basebiz.gradle  baselibrary.gradle
(+201 files in other folders)
